create style mobile

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,2 +1,3 @@
 @import './global', './cardInfoPets',
- './logo', './buttom', './navbar', './main';
+ './logo', './buttom', './navbar', './main',
+ './footer';
