--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -57,6 +57,7 @@
     display: flex;
     flex-direction: column;
     margin: 0 auto;
+    gap: 2rem;
 }
 
 .card_steps {
@@ -73,7 +74,7 @@
 }
 
 // section info services
-.card_icons-ifo-section-secondy {
+.card_list-info-tortyare {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -87,11 +88,14 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        font-weight: bold;
 
         img {
+            max-width: 5rem;
             width: 100%;
             height: 100%;
             object-fit: contain;
+            margin-bottom: 1rem;
         }
     }
 }
@@ -104,6 +108,11 @@
     text-align: center;
 
     margin-bottom: 3rem;
+
+    h3 {
+        font-size: 2rem;
+        margin-bottom: 5rem;
+    }
 }
 
 // card_icons-ifo-section-fourth
@@ -114,4 +123,104 @@
     text-align: center;
 
     margin-bottom: 3rem;
+}
+
+// card_dog-fifth
+.container_dog-fifth {
+    max-width: 95%;
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+
+    h3 {
+        font-size: 2rem;
+        font-weight: bold;
+        margin-bottom: 2rem;
+        text-align: center;
+    }
+}
+
+.card_dog-fifth {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+    padding: 10px;
+    margin-bottom: 2rem;
+
+    background: #e5e5e58f;
+}
+
+.card_dog-fifth-box-info-feedback {
+    display: flex;
+    flex-direction: column;
+
+    img {
+        margin-bottom: 0.3rem;
+    }
+
+    p {
+        margin-bottom: 1.5rem;
+    }
+
+    span {
+        display: flex;
+        gap: 0.2rem;
+    }
+}
+
+.card_dog-fifth-box-info-feedback img {
+    max-width: 5rem;
+    width: 100%;
+    height: 100%;
+}
+
+.card_dog-fifth-box-feedback {
+    display: flex;
+    align-items: start;
+    gap: 1rem;
+}
+
+.img-profile-info-feedback img {
+    max-width: 5rem;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    margin-top: -0.5rem;
+}
+
+.card_dog-fifth-box-img img {
+    max-width: 10rem;
+    width: 100%;
+    height: 100%;
+    margin-bottom: -0.9rem;
+}
+
+.card_dog-fifth-box-info {
+    display: flex;
+    flex-direction: column;
+}
+
+// card_help
+.card_help {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 2rem;
+
+    h3 {
+        font-size: 2rem;
+        margin-bottom: 1rem;
+    }
+
+    p, b {
+        color: #989898;
+    }
 }
