--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 1rem;
+    position: relative;
 }
 
 .box_links-navigation {
@@ -10,9 +11,21 @@
     align-items: center;
     justify-content: center;
     gap: 1rem;
+
+    list-style: none;
+
+    li {
+        a {
+            text-decoration: none;
+        }
+    }
 }
 
 .btn_menu {
+    display: none;
+}
+
+.card_menu {
     display: none;
 }
 
@@ -21,9 +34,46 @@
 @media(max-width: 750px) {
     .btn_menu {
         display: flex;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
     }
 
     .box_links-navigation {
         display: none;
+    }
+
+    .card_menu {
+        max-width: 250px;
+        width: 100%;
+        height: auto;
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
+        background-color: #fff;
+        border: 2px solid #010101;
+        padding: 2rem;
+        text-align: center;
+
+        ul {
+            list-style: none;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            height: 100vh;
+
+            li {
+                a {
+                    text-decoration: none;
+                    color: #222;
+                }
+            }
+        }
     }
 }
