--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -1,85 +1,105 @@
 .card_navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1rem;
-    position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+  position: relative;
 }
 
 .box_links-navigation {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
 
-    list-style: none;
+  list-style: none;
 
-    li {
-        a {
-            text-decoration: none;
-            color: #FFDC26;
-            animation: ease-in-out;
+  li {
+    a {
+      text-decoration: none;
+      color: #ffdc26;
+      animation: ease-in-out;
 
-            &:hover {
-                color: #977602;
-            }
-        }
+      border-bottom: 2px solid transparent;
+
+      &:hover {
+        color: #977602;
+        border-color: #ffdc26;
+      }
     }
+  }
 }
 
 .btn_menu {
-    display: none;
+  display: none;
 }
 
 .card_menu {
-    display: none;
+  display: none;
 }
 
+.background-menu {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #222;
+  //   z-index: ;
+  background: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+}
 
 // desktop / mobile
-@media(max-width: 750px) {
-    .btn_menu {
-        display: flex;
-        background-color: transparent;
-        border: none;
-        cursor: pointer;
-    }
+@media (max-width: 750px) {
+  .btn_menu {
+    display: flex;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    z-index: 800;
+  }
 
-    .box_links-navigation {
-        display: none;
-    }
+  .box_links-navigation {
+    display: none;
+  }
 
-    .card_menu {
-        max-width: 250px;
-        width: 100%;
-        height: auto;
-        position: absolute;
-        top: 0;
-        right: 0;
-        left: 0;
-        bottom: 0;
+  .card_menu {
+    position: fixed;
+    top: 0;
+    bottom: 0;
 
-        display: flex;
-        flex-direction: column;
-        gap: 1.5rem;
-        background-color: #fff;
-        border: 2px solid #010101;
-        padding: 2rem;
-        text-align: center;
+    max-width: 250px;
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
 
-        ul {
-            list-style: none;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            height: 100vh;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    background-color: #fff;
+    border: 2px solid #010101;
+    padding: 2rem;
+    text-align: center;
 
-            li {
-                a {
-                    text-decoration: none;
-                    color: #222;
-                }
-            }
+    ul {
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      height: 100vh;
+
+      li {
+        a {
+          text-decoration: none;
+          color: #222;
         }
+      }
     }
+  }
 }
